Enhance index.html with responsive design
Added media query for responsive image sizing.

--- a/index.html
+++ b/index.html
@@ -32,6 +32,12 @@
             border-radius: 2px;
             box-shadow: 3px 5px 8px #1a1b1c;
         }
+        @media screen and (max-width: 768px) {
+            .image img{
+                width: 90%;
+                height: 95%;
+            }
+        }
     </style>
 </head>
 <body>
