Refactor index.html for improved layout and styles
Updated the HTML structure and styles for better responsiveness.

--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
             .image img{
                 width: 97.5%;
                 height: 95%;
+                object-fit:"none";
             }
         }
     </style>
@@ -46,6 +47,7 @@
     </div>
 </body>
 </html>
+
 
 
 
