--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
         }
         @media screen and (max-width: 500px) {
             .image img{
-                width: 97.5%;
+                width: 99.5%;
                 height: 95%;
-                object-fit:"none";
+                object-fit:cover;
             }
         }
     </style>
@@ -47,6 +47,7 @@
     </div>
 </body>
 </html>
+
 
 
 
