Fix HTML formatting and improve media query

--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
         }
         @media screen and (max-width: 500px) {
             .image img{
-                width: 99.5%;
-                height: 95%;
+                width: 99.5vw;
+                height: 95vh;
                 object-fit:cover;
             }
         }
@@ -47,6 +47,7 @@
     </div>
 </body>
 </html>
+
 
 
 
