Refactor index.html for improved layout and styles
Updated the HTML structure and CSS styles for better responsiveness.

--- a/index.html
+++ b/index.html
@@ -33,6 +33,13 @@
             box-shadow: 3px 5px 8px #1a1b1c;
         }
         @media screen and (max-width: 500px) {
+            .image{
+                width: 97vw;
+                height: 98vh;
+                dominant-baseline: flex;
+                align-items: center;
+                justify-content: center;
+            }
             .image img{
                 width: 99.5vw;
                 height: 95vh;
@@ -47,6 +54,7 @@
     </div>
 </body>
 </html>
+
 
 
 
