--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Sowmyz</title>
     <style>
         *{
             padding: 0;
@@ -11,39 +11,34 @@
             box-sizing: border-box;
         }
         body{
-            width: 100vw;
-            height: 100vh;
+            min-height: 100vh;
             display: flex;
             align-items: center;
             justify-content: center;
         }
+
         .image{
             width: 100%;
-            height: 100%;
             padding: 10px;
             display: flex;
             align-items: center;
             justify-content: center;
         }
+
         .image img{
             width: 32%;
-            height: 95%;
+            height: auto;
             object-fit: cover;
             border-radius: 2px;
             box-shadow: 3px 5px 8px #1a1b1c;
         }
-        @media screen and (max-width: 500px) {
-            .image{
-                width: 97vw;
-                height: 98vh;
-                dominant-baseline: flex;
-                align-items: center;
-                justify-content: center;
-            }
+
+        @media screen and (max-width: 700px) {
             .image img{
-                width: 99.5vw;
-                height: 95vh;
-                object-fit:cover;
+                width: 100%;
+                max-width: 400px;
+                height: auto;
+                object-fit: contain;
             }
         }
     </style>
@@ -54,10 +49,3 @@
     </div>
 </body>
 </html>
-
-
-
-
-
-
-
