--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
             display: flex;
             align-items: center;
             justify-content: center;
+            flex-direction: column;
+            
         }
 
         .image{
@@ -47,5 +49,9 @@
     <div class="image">
         <img src="dressOne.jpg" alt="">
     </div>
+    <div class="image">
+        <img src="yellow.jpg" alt="">
+    </div>
 </body>
 </html>
+
