Add new image element to index.html
Added a new image to the HTML structure.

--- a/index.html
+++ b/index.html
@@ -52,7 +52,11 @@
     <div class="image">
         <img src="yellow.jpg" alt="">
     </div>
+    <div class="image">
+        <img src="webTwo.jpg" alt="">
+    </div>
 </body>
 </html>
+
 
 
