Update image source in index.html
Replaced 'webTwo.jpg' with 'ogYellow.jpg' in the image section.

--- a/index.html
+++ b/index.html
@@ -50,10 +50,11 @@
         <img src="dressOne.jpg" alt="">
     </div>
     <div class="image">
-        <img src="webTwo.jpg" alt="">
+        <img src="ogYellow.jpg" alt="">
     </div>
 </body>
 </html>
+
 
 
 
